tests/parser/var_err17.expected
Syntax Error: line 4:
Unexpected token (TOK_COLON, ':'), likely missing a(n)  
  'TOK_ID'
