tests/parser/var_err17.mtp
(* variable section start *)

(*missing id*)
var : array (20) of integer;

begin

end
.